crates/swc_ecma_parser/tests/test262-error-references/fail/175c1c09015415e1.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/175c1c09015415e1.js:1:17
  |
1 | 'use strict'; ('\41')
  |                 ^^

